--- a/index.html
+++ b/index.html
@@ -8,65 +8,12 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;400;700&display=swap" rel="stylesheet">   
 
+  <link rel="stylesheet" href="style.css">
+
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 0.6rem; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
 
-    html {
-      font-family: 'Outfit', sans-serif;
-    }
-
-    body {
-      background-color: hsl(212, 45%, 89%);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .main {
-      background-color: white;
-      width: 390px;
-      height: 590px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      border-radius: 20px;
-      transition: 0.4s;
-    }
-
-    .main:hover {
-      width: 400px;
-      height: 600px;
-      box-shadow: 3px 3px 10px grey;
-    }
-
-    img {
-      width: 90%;
-      height: 60%;
-      border-radius: 3%;
-    }
-
-    h2 , h4{
-      text-align: center;
-      padding-left: 10%;
-      padding-right: 10%;
-    }
-
-    h2 {
-      font-weight: 700;
-    }
-
-    h4 {
-      color: hsl(220, 15%, 55%);
-      font-weight: 400;
-    }
-
-
-  </style>
 </head>
 <body>
 
